--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
   font-family: helvetica, sans-serif;
   font-weight: bold;
   font-family: 'Orbitron';
-  font-size: 1.4rem;
+  font-size: 1.5em;
   display: flex;
   align-items: center;
   padding-left: 5%;
@@ -34,7 +34,7 @@ header {
 }
 
 .about {
-  font-size: 1.4rem;
+  font-size: 1.4em;
   width: 60%;
   color: #2d2d2d;
 }
@@ -45,12 +45,12 @@ header {
 }
 
 input[type="text"] {
-  font-size: 1rem;
+  font-size: 1em;
   color: #2d2d2d;
 }
 
 button {
-  font-size: 1rem;
+  font-size: 1em;
   background: #05AFFA;
   color: #fff;
   border: 1px solid #05AFFA;
@@ -67,13 +67,21 @@ button:hover {
 }
 
 .root {
-  font-size: 3rem;
+  font-size: 2em;
   margin-top: 1em;
   text-align: center;
   color: #2d2d2d;
 }
 
 .error {
-  font-size: 2rem;
+  font-size: 2em;
   color: #E31017;
+}
+
+span#digital-root {
+  font-weight: bold;
+}
+
+.hidden {
+  display: none;
 }
